# internal/apiserver/service/dms_controller.go
@@ -2227,6 +2227,55 @@ func (d *DMSController) RegisterDMSPlugin(c echo.Context) error {
 	return NewOkResp(c)
 }
 
+// swagger:route GET /v1/dms/configurations/login/tips Configuration GetLoginTips
+//
+// get login configuration.
+//
+//	responses:
+//	  200: body:GetLoginTipsReply
+//	  default: body:GenericResp
+func (d *DMSController) GetLoginTips(c echo.Context) error {
+	reply, err := d.DMS.GetLoginTips(c.Request().Context())
+	if err != nil {
+		return NewErrResp(c, err, apiError.APIServerErr)
+	}
+	return NewOkRespWithReply(c, reply)
+}
+
+// swagger:operation PATCH /v1/dms/configurations/login Configuration UpdateLoginConfiguration
+//
+// Update login configuration.
+//
+// ---
+// parameters:
+//   - name: login
+//     description: update login configuration
+//     required: true
+//     in: body
+//     schema:
+//       "$ref": "#/definitions/UpdateLoginConfigurationReq"
+// responses:
+//   '200':
+//     description: GenericResp
+//     schema:
+//       "$ref": "#/definitions/GenericResp"
+//   default:
+//     description: GenericResp
+//     schema:
+//       "$ref": "#/definitions/GenericResp"
+func (d *DMSController) UpdateLoginConfiguration(c echo.Context) error {
+	req := new(aV1.UpdateLoginConfigurationReq)
+	err := bindAndValidateReq(c, req)
+	if nil != err {
+		return NewErrResp(c, err, apiError.BadRequestErr)
+	}
+	err = d.DMS.UpdateLoginConfiguration(c.Request().Context(), req)
+	if err != nil {
+		return NewErrResp(c, err, apiError.APIServerErr)
+	}
+	return NewOkResp(c)
+}
+
 // swagger:route GET /v1/dms/configurations/oauth2 Configuration GetOauth2Configuration
 //
 // Get Oauth2 configuration.
